--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,12 +44,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Whitespace</a>
+          <a class="brand" href="/">Whitespace</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Projects", "/projects"  %></li>
+              <li><%= link_to "Members", "/members"  %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -62,9 +61,8 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Projects", "/projects"  %></li>
+              <li><%= link_to "Members", "/members"  %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
