--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -30,7 +30,7 @@
   <% end %>
 
   <% @project.comments.each do |comment| %>
-     <p><%= comment.title %>
+     <p>Comment: <%= comment.title %>
        <%= comment.comment %>
      </p>
   <% end %>
