--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
           <a class="brand" href="/">Whitespace</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Projects", "/projects"  %></li>
-              <li><%= link_to "Members", "/members"  %></li>
+              <li><%= link_to "Projects", projects_path  %></li>
+              <li><%= link_to "Users", users_path  %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
