--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,14 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
+    <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= stylesheet_link_tag "comments", :media => "all" %>
+    <%= stylesheet_link_tag "pages", :media => "all" %>
+    <%= stylesheet_link_tag "phases", :media => "all" %>
+    <%= stylesheet_link_tag "phase", :media => "all" %>
+    <%= stylesheet_link_tag "projects", :media => "all" %>
+    <%= stylesheet_link_tag "proposals", :media => "all" %>
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
