--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
             </ul>
             <div id="login">
               <% if user_signed_in? %>
-                   <%= current_user.email %>
+                   <%= link_to current_user.email, user_path(current_user) %>
                    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
               <% else %>
                    <%= link_to "Sign In", new_user_session_path %> | <%= link_to "Sign up", new_user_registration_path %>
