--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,31 +14,17 @@
 
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= stylesheet_link_tag "comments", :media => "all" %>
-    <%= stylesheet_link_tag "pages", :media => "all" %>
-    <%= stylesheet_link_tag "phases", :media => "all" %>
-    <%= stylesheet_link_tag "phase", :media => "all" %>
-    <%= stylesheet_link_tag "projects", :media => "all" %>
-    <%= stylesheet_link_tag "proposals", :media => "all" %>
+    <%= stylesheet_link_tag params[:controller] if OneStoryWeb::Application.assets.find_asset("#{params[:controller]}.css") %>
+    <%= stylesheet_link_tag "#{params[:controller]}/#{params[:action]}.css" if OneStoryWeb::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.css") %>
 
-    <!-- For third-generation iPad with high-resolution Retina display: -->
-    <!-- Size should be 144 x 144 pixels -->
+    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag params[:controller] if OneStoryWeb::Application.assets.find_asset("#{params[:controller]}.js") %>
+    <%= javascript_include_tag "#{params[:controller]}/#{params[:action]}.js" if OneStoryWeb::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.js") %>
+
     <%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
-
-    <!-- For iPhone with high-resolution Retina display: -->
-    <!-- Size should be 114 x 114 pixels -->
     <%= favicon_link_tag 'images/apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
-
-    <!-- For first- and second-generation iPad: -->
-    <!-- Size should be 72 x 72 pixels -->
     <%= favicon_link_tag 'images/apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
-
-    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <!-- Size should be 57 x 57 pixels -->
     <%= favicon_link_tag 'images/apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
-
-    <!-- For all other devices -->
-    <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
   </head>
   <body>
