--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,12 @@
 
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= stylesheet_link_tag params[:controller] if OneStoryWeb::Application.assets.find_asset("#{params[:controller]}.css") %>
-    <%= stylesheet_link_tag "#{params[:controller]}/#{params[:action]}.css" if OneStoryWeb::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.css") %>
+    <%= stylesheet_link_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.css") %>
+    <%= stylesheet_link_tag "#{params[:controller]}/#{params[:action]}.css" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.css") %>
 
     <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag params[:controller] if OneStoryWeb::Application.assets.find_asset("#{params[:controller]}.js") %>
-    <%= javascript_include_tag "#{params[:controller]}/#{params[:action]}.js" if OneStoryWeb::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.js") %>
+    <%= javascript_include_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.js") %>
+    <%= javascript_include_tag "#{params[:controller]}/#{params[:action]}.js" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.js") %>
 
     <%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
     <%= favicon_link_tag 'images/apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
