--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,6 @@
     <title><%= content_for?(:title) ? yield(:title) : "Whitespace" %></title>
     <%= csrf_meta_tags %>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-    <![endif]-->
-
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= stylesheet_link_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.css") %>
@@ -20,15 +15,13 @@
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.js") %>
     <%= javascript_include_tag "#{params[:controller]}/#{params[:action]}.js" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.js") %>
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <![endif]-->
 
-    <%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
-    <%= favicon_link_tag 'images/apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
-    <%= favicon_link_tag 'images/apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
-    <%= favicon_link_tag 'images/apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
-    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+    <%= favicon_link_tag '/favicon.ico', :rel => 'shortcut icon' %>
   </head>
   <body>
-
     <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
         <div class="container-fluid">
@@ -43,37 +36,36 @@
               <li><%= link_to "Projects", projects_path  %></li>
               <li><%= link_to "Users", users_path  %></li>
             </ul>
-            <div id="login">
+            <ul id="login" class="nav">
               <% if user_signed_in? %>
-                   <%= link_to current_user.email, user_path(current_user) %>
-                   <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+                   <li><%= link_to current_user.email, user_path(current_user) %></li>
+                   <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
               <% else %>
-                   <%= link_to "Sign In", new_user_session_path %> | <%= link_to "Sign up", new_user_registration_path %>
+                   <li><%= link_to "Sign In", new_user_session_path %></li>
+                   <li><%= link_to "Sign up", new_user_registration_path %></li>
               <% end %>
-            </div>
+            </ul>
           </div>
         </div>
       </div>
     </div>
-
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-      </div><!--/row-->
+      </div>
+      <footer id="footer">
 
-      <footer>
         <p>&copy; Whitespace Initiatives</p>
+        <ul class="inline links">
+          <li><%= link_to "About", '/about'  %></li>
+          <li><%= link_to "Contact", '/contact'  %></li>
+          <li><%= link_to "Help", '/help'  %></li>
+          <li><%= link_to "Problem", '/problem'  %></li>
+        </ul>
       </footer>
-
-    </div> <!-- /container -->
-
-    <!-- Javascripts
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <%= javascript_include_tag "application" %>
-
+    </div>
   </body>
 </html>
