--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,7 +1,4 @@
-<tr>
-  <td><%= project.name %></td>
-  <td><%= project.description %></td>
-  <td><%= link_to 'Show', project %></td>
-  <td><%= link_to 'Edit', edit_project_path(project) %></td>
-  <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-</tr>
+<div class="box project">
+  <div class="project-name"><%= link_to project.name, project_path(project) %></div>
+  <div class="project-description"><%= project.description %></div>
+</div>
