--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,18 +1,9 @@
-<h1>Listing projects</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<%= render partial: 'project', :collection => @projects %>
-
-</table>
-
-<br />
-
-<%= link_to 'New Project', new_project_path %>
+<h4>Projects</h4>
+<div class="add">
+     <%= link_to 'New Project', new_project_path, {class: 'btn'} %>
+</div>
+<hr>
+<div class="projects clear">
+  <%= render partial: 'project', :collection => @projects, :as => :project %>
+</div>
+<hr>
