--- a/app/views/proposals/_form.html.erb
+++ b/app/views/proposals/_form.html.erb
@@ -1,21 +1,16 @@
-<%= form_for(@proposal) do |f| %>
-  <% if @proposal.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@proposal.errors.count, "error") %> prohibited this proposal from being saved:</h2>
-
-      <ul>
-      <% @proposal.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+<div class="proposal-form">
+  <%= form_for([@phase.project, @phase, @proposal]) do |f| %>
+       <% if @proposal.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@proposal.errors.count, "error") %> prohibited this proposal from being saved:</h2>
+              <ul>
+                <% @proposal.errors.full_messages.each do |msg| %>
+                     <li><%= msg %></li>
+                <% end %>
+              </ul>
+            </div>
+       <% end %>
+       <%= f.text_field :text, {:placeholder => 'Enter proposal'} %>
+       <%= f.submit %>
   <% end %>
-
-  <div class="field">
-    <%= f.label :text %><br />
-    <%= f.text_field :text %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
