--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,9 @@
 <h4>Projects</h4>
+<% if can? :create, Project %>
 <div class="add">
-     <%= link_to 'New Project', new_project_path, {class: 'btn'} %>
+  <%= link_to 'New Project', new_project_path, {class: 'btn'} %>
 </div>
+<% end %>
 <hr>
 <div class="projects clear">
   <%= render partial: 'project', :collection => @projects, :as => :project %>
