--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this member from being saved:</h2>
-
       <ul>
       <% @user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -28,7 +27,7 @@
   </div>
   <div class="field">
      <%= f.label :role %><br />
-     <%= f.collection_select :role, User::ROLES, :to_s, :humanize %>
+     <%= f.collection_select :role, User::ROLES, :downcase, :humanize %>
   </div>
   <div class="actions">
     <%= f.submit %>
