--- a/app/views/phases/_comment_form.html.erb
+++ b/app/views/phases/_comment_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@phase.project, @phase, @comment]) do |f| %>
+<%= form_for([@phase.project, @phase, @comment], :remote => true, :html => {:class => "form-inline"}) do |f| %>
      <% if @comment.errors.any? %>
           <div id="error_explanation">
             <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -9,7 +9,12 @@
             </ul>
           </div>
      <% end %>
-     <%= f.text_field :title, {:placeholder => 'Enter title'} %>
-     <%= f.text_field :comment, {:placeholder => 'Enter comment'} %>
-     <%= f.submit %>
+
+    <div class="control-group">
+      <div class="controls"><%= f.text_area :comment, {:placeholder => 'Enter comment', :rows => nil, :cols => nil} %></div>
+    </div>
+
+    <div class="control-group">
+      <div class="controls"><%= f.submit :class => 'btn' %></div>
+    </div>
 <% end %>
