--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,5 @@
 <div class="box rounded comment">
-  <div class="comment-title"><%= comment.title %></div>
+  <div class="comment-date"><%= comment.created_at %></div>
+  <div class="comment-user"><%= comment.user.nil? ? "Anonymous" : comment.user.display_name %></div>
   <div class="comment-text"><%= comment.comment %></div>
 </div>
