--- a/app/views/projects/_comment_form.html.erb
+++ b/app/views/projects/_comment_form.html.erb
@@ -11,7 +11,7 @@
      <% end %>
 
     <div class="control-group">
-        <div class="controls"><%= f.text_area :comment, {:placeholder => 'Enter comment', :rows => nil, :cols => nil} %></div>
+        <div class="controls"><%= f.text_area :text, {:placeholder => 'Enter comment', :rows => nil, :cols => nil} %></div>
     </div>
 
     <div class="control-group">
