--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,6 +2,10 @@
 <h4><%= link_to 'Projects', projects_path %> | <%= @project.name %></h4>
 <h5><%= @project.description %></h5>
 <hr>
+<% @project.tags.each do |tag|%>
+     <span class="tag"><%= tag.name %></span>
+<% end %>
+<hr>
 <h4><%= link_to 'Phases', project_phases_path(@project) %></h4>
 <div class="phases clear">
   <%= render partial: 'phase', :collection => @project.phases, :as => :phase %>
