Updated projects, phases and proposals to use shared partial comments/form for all commenting

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,21 +1,14 @@
-<%= form_for([@model, @comment]) do |f| %>
-  <% if @comment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
-      <ul>
-      <% @comment.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :text %><br />
-    <%= f.text_field :text %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= form_for record, :remote => true, :html => {:class => 'form-inline'}  do |f| %>
+     <% if @comment.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+            <ul>
+              <% @comment.errors.full_messages.each do |msg| %>
+                   <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
+     <% end %>
+     <%= f.text_area :text, {:placeholder => 'Enter comment', :rows => 1} %>
+     <%= f.submit :class => 'btn' %>
 <% end %>
