--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="box rounded comment">
-  <div class="comment-date"><%= comment.created_at %></div>
-  <div class="comment-user"><%= comment.user.nil? ? "Anonymous" : comment.user.display_name %></div>
-  <div class="comment-text"><%= comment.text %></div>
+  <span class="comment-text">"<%= comment.text %>"</span>
+  <span class="comment-user"> - <%= comment.user.nil? ? "Anonymous" : comment.user.display_name %></span>
+  <span class="comment-date"><%= comment.created_at.strftime('at %l:%M%P on %B %d, %Y') %></span>
 </div>
