--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -17,7 +17,7 @@
 </div>
 <% if can? :create, Comment %>
 <div class="box">
-  <%= render 'comment_form', :locals=>{:project => @project, :comment => @comment} %>
+  <%= render 'comments/form', :record => [@project, @comment], :comment => @comment %>
 </div>
 <% end %>
 <hr>
