--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,14 +1,11 @@
-<%= form_for record, :remote => true, :html => {:class => 'form-inline'}  do |f| %>
+<%= form_for record, :remote => true, :html => {id: 'comment-form', :class => 'form-inline'} do |f| %>
      <% if @comment.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-            <ul>
-              <% @comment.errors.full_messages.each do |msg| %>
-                   <li><%= msg %></li>
-              <% end %>
-            </ul>
-          </div>
+          <ul class="errors">
+            <% @comment.errors.full_messages.each do |msg| %>
+                 <li><%= msg %></li>
+            <% end %>
+          </ul>
      <% end %>
-     <%= f.text_area :text, {:placeholder => 'Enter comment', :rows => 1} %>
-     <%= f.submit :class => 'btn' %>
+     <%= f.text_area :text, {:placeholder => 'Comment', :rows => 1} %>
+     <%= f.submit 'Submit', :class => 'btn' %>
 <% end %>
