--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,12 +10,12 @@
     </div>
   <% end %>
   <div class="field">
-     <%= f.label :firstname %><br />
-     <%= f.text_field :firstname %>
+     <%= f.label :first_name %><br />
+     <%= f.text_field :first_name %>
   </div>
   <div class="field">
-     <%= f.label :lastname %><br />
-     <%= f.text_field :lastname %>
+     <%= f.label :last_name %><br />
+     <%= f.text_field :last_name %>
   </div>
   <div class="field">
      <%= f.label :email %><br />
