--- a/app/views/users/_user_box.html.erb
+++ b/app/views/users/_user_box.html.erb
@@ -1,6 +1,6 @@
 <div class="user box rounded">
   <div class="user-name">
-    <%= link_to "#{user.firstname} #{user.lastname}", user %>
+    <%= link_to "#{user.first_name} #{user.last_name}", user %>
   </div>
 </div>
 <hr>
