--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
-<h3><%= @user.firstname %> <%= @user.lastname %></h3>
+<h3><%= @user.first_name %> <%= @user.last_name %></h3>
 <h4><%= @user.email %></h4>
 <hr>
