--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -4,10 +4,10 @@
   <%= link_to @phase.name, project_phase_path(@phase.project, @phase) %> |
   Proposals</h4>
 <hr>
-<div class="proposals clear">
-  <% @proposals.each do |proposal| %>
-       <div class="box rounded proposal">
-         <%= link_to proposal.text, project_phase_proposal_path(proposal.phase.project, proposal.phase, proposal) %>
+<div id="ideas" class="clear">
+  <% @ideas.each do |idea| %>
+       <div class="box rounded idea">
+         <%= link_to idea.text, project_phase_idea_path(idea.phase.project, idea.phase, idea) %>
        </div>
   <% end %>
 </div>
