--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Whitespace" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : 'Whitespace' %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
@@ -33,16 +33,16 @@
           <a class="brand" href="/">Whitespace</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Projects", projects_path  %></li>
-              <li><%= link_to "Users", users_path  %></li>
+              <li><%= link_to 'Projects', projects_path  %></li>
+              <li><%= link_to 'Users', users_path  %></li>
             </ul>
             <ul id="login" class="nav">
               <% if user_signed_in? %>
                    <li><%= link_to current_user.email, user_path(current_user) %></li>
-                   <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+                   <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
               <% else %>
-                   <li><%= link_to "Sign In", new_user_session_path %></li>
-                   <li><%= link_to "Sign up", new_user_registration_path %></li>
+                   <li><%= link_to 'Login', new_user_session_path %></li>
+                   <li><%= link_to 'Signup', new_user_registration_path %></li>
               <% end %>
             </ul>
           </div>
