--- a/app/views/resources/_form.html.erb
+++ b/app/views/resources/_form.html.erb
@@ -8,6 +8,7 @@
      <% end %>
      <%= f.text_field :name, {:placeholder => 'Name'} %>
      <%= f.text_field :url, {:placeholder => 'URL'} %>
+     <%= f.text_area :description, {:placeholder => 'Description', :rows => 1} %>
      <%= f.select :type, [Article.name, Document.name, Tutorial.name, Software.name, Hardware.name] %>
      <%= f.submit 'Add', :class => 'btn' %>
 <% end %>
