--- a/app/views/resources/_resource.html.erb
+++ b/app/views/resources/_resource.html.erb
@@ -1,7 +1,17 @@
 <% unless resource.nil? %>
-<div class="box rounded resource">
+<div id="<%= "resource_#{resource.id}"%>" class="box rounded resource">
   <span class="resource-name"><%= resource.name unless resource.nil? %></span>
+  <span class="resource-description"><%= resource.description unless resource.nil? %></span>
   <span class="resource-type"><%= "(#{resource.type})" unless resource.nil? %></span>
-  <span class="resource-url"><%= link_to resource.url, resource.url unless resource.nil? %></span>
+  <span class="resource-url"><%= link_to resource.url, resource.url, target: '_blank' unless resource.nil? %></span>
+  <span class="resource-votes"><%= "(#{resource.plusminus})" %></span>
+  <span class="resource-vote-up"><%=
+      if user_signed_in? && !current_user.voted_on?(resource) && resource.user != current_user
+        link_to('+', vote_up_resource_path(resource), :remote => true, :method => :post)
+      end %></span>
+  <span class="resource-vote-down"><%=
+      if user_signed_in? && !current_user.voted_on?(resource) && resource.user != current_user
+        link_to('-', vote_down_resource_path(resource), :remote => true, :method => :post)
+      end %></span>
 </div>
 <% end %>
