--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,43 +12,39 @@
     <%= stylesheet_link_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.css") %>
     <%= stylesheet_link_tag "#{params[:controller]}/#{params[:action]}.css" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.css") %>
 
-    <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.js") %>
-    <%= javascript_include_tag "#{params[:controller]}/#{params[:action]}.js" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.js") %>
-    <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-    <![endif]-->
-
     <%= favicon_link_tag '/favicon.ico', :rel => 'shortcut icon' %>
   </head>
   <body>
-    <div class="navbar navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex8-collapse">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">Whitespace</a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <li><%= link_to 'Projects', projects_path  %></li>
-              <li><%= link_to 'Users', users_path  %></li>
-            </ul>
-            <ul id="login" class="nav">
-              <% if user_signed_in? %>
-                   <li><%= link_to current_user.email, user_path(current_user) %></li>
-                   <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
-              <% else %>
-                   <li><%= link_to 'Login', new_user_session_path %></li>
-                   <li><%= link_to 'Signup', new_user_registration_path %></li>
-              <% end %>
-            </ul>
-          </div>
+          </button>
+          <a class="navbar-brand" href="/">Whitespace</a>
         </div>
-      </div>
-    </div>
+
+        <div class="collapse navbar-collapse navbar-ex8-collapse">
+          <ul class="nav navbar-nav">
+            <li><%= link_to 'Projects', projects_path  %></li>
+            <li><%= link_to 'Users', users_path  %></li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <!--<li><button type="button" class="btn btn-default navbar-btn">Sign in</button></li>-->
+            <% if user_signed_in? %>
+                <li><%= link_to current_user.email, user_path(current_user) %></li>
+                <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+            <% else %>
+                <li><%= link_to 'Login', new_user_session_path %></li>
+                <li><%= link_to 'Signup', new_user_registration_path %></li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
+
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
@@ -57,7 +53,6 @@
         </div>
       </div>
       <footer id="footer">
-
         <p>&copy; Whitespace Initiatives</p>
         <ul class="inline links">
           <li><%= link_to "About", '/about'  %></li>
@@ -67,5 +62,12 @@
         </ul>
       </footer>
     </div>
+
+    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.js") %>
+    <%= javascript_include_tag "#{params[:controller]}/#{params[:action]}.js" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.js") %>
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <![endif]-->
   </body>
 </html>
