--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,17 +1,28 @@
-<div class="clear">
-  <div class="box">
-    <%= link_to 'I Have A Problem', '/problem' %>
+<h1>Whitespace</h1>
+
+<ul class="whitespace-is">
+  <ul>Solving problems</ul>
+  <ul>Flat structure</ul>
+  <ul>Reusable solutions</ul>
+  <ul>Target local</ul>
+  <ul>Think global</ul>
+</ul>
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="well"><%= link_to 'I Have A Problem', '/problem' %></div>
   </div>
-  <div class="box">
-    <%= link_to 'I Want To Help', '/help' %>
+  <div class="col-sm-6">
+    <div class="well"><%= link_to 'I Want To Help', '/help' %></div>
   </div>
 </div>
-<hr>
-<div class="project">
-  <% @projects.each do |project| %>
-       <div class="box rounded">
-         <%= link_to project.name, project_path(project), {:title => project.description} %>
-       </div>
-  <% end %>
+
+<div class="row">
+    <ul class="projects list-unstyled col-md-12">
+      <% @projects.each do |project| %>
+        <li class="project well well-sm">
+          <%= link_to project.name, project_path(project), {:title => project.description} %>
+        </li>
+      <% end %>
+    </ul>
 </div>
-<hr>
