Render Phase and Idea via ajax

--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -1,7 +1,9 @@
-<div class="box idea">
+<div id="idea_<%= idea.id %>" class="box idea" data-id="<%= idea.id %>">
   <span class="idea-text"><%= link_to idea.text, project_phase_idea_path(idea.phase.project, idea.phase, idea) %></span>
   <span class="idea-user"><%= idea.user.display_name unless idea.user.nil? %></span>
   <span class="idea-votes"><%= idea.votes_for == 1 ? '1 vote' : "#{idea.votes_for} votes" %></span>
-  <span class="idea-vote-up"><%= link_to('+', vote_up_project_phase_idea_path (idea.phase.project, idea.phase, idea), :remote => true, :method => :post) %></span>
+  <span class="idea-vote-up"><%= link_to('+', vote_up_project_phase_idea_path(idea.phase.project, idea.phase, idea), :remote => true, :method => :post) %></span>
   <span class="idea-vote-down"><%= link_to('-', vote_down_project_phase_idea_path(idea.phase.project, idea.phase, idea), :remote => true, :method => :post) %></span>
+  <span class="idea-more"><%= link_to '...', project_phase_idea_path(idea.phase.project, idea.phase, idea.id), :remote => true if idea.comments.count > 0 %></span>
+  <div id="idea-comments"></div>
 </div>
