--- a/app/views/phases/_phase.html.erb
+++ b/app/views/phases/_phase.html.erb
@@ -1,4 +1,7 @@
 <div class="box phase">
   <div class="phase-name"><%= link_to phase.name, project_phase_path(phase.project, phase) %></div>
   <div class="phase-description"><%= phase.description %></div>
+  <div class="phase-ideas"><%= render partial: 'ideas/idea', :collection => phase.ideas, :as => :idea %></div>
+  <div class="phase-comments"><%= render partial: 'comments/comment', :collection => phase.comments, :as => :comment %></div>
+  <div class="phase-resources"><%= render partial: 'resources/resource', :collection => phase.resources, :as => :resource %></div>
 </div>
