--- a/app/views/projects/_phase.html.erb
+++ b/app/views/projects/_phase.html.erb
@@ -1,5 +1,5 @@
-<li class="well well-sm phase">
-  <span class="phase-title"><%= link_to phase.name, project_phase_path(phase.project, phase) %></span>
+<li class="well well-sm phase" data-id='<%= phase.id %>'>
+  <span class="phase-title"><%= link_to phase.name, project_phase_path(phase.project, phase), remote: true %></span>
   <span class="phase-description"><%= phase.description %></span>
   <span class="phase-state"><%= phase.state %></span>
 </li>
