Swapped box class for bootstrap small well. #22

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,5 +11,5 @@
           <%= f.check_box :private %>
           Private?
      <% end %>
-     <%= f.submit 'Submit', :class => 'btn' %>
+     <%= f.submit 'Submit', :class => 'btn btn-default' %>
 <% end %>
