--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -7,5 +7,5 @@
        </ul>
   <% end %>
      <%= f.text_area :text, {:placeholder => 'Idea', :rows => 1} %>
-  <%= f.submit 'Submit', :class => 'btn' %>
+  <%= f.submit 'Submit', :class => 'btn btn-default' %>
 <% end %>
