--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,4 @@
-<div class="box project">
+<div class="well well-sm project">
   <div class="project-name"><%= link_to project.name, project_path(project) %></div>
   <div class="project-description"><%= project.description %></div>
 </div>
