--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users</h1>
 <div class="add">
-  <%= link_to 'New User', new_user_path, {class: 'btn'}  %>
+  <%= link_to 'New User', new_user_path, {class: 'btn btn-default'}  %>
 </div>
 <hr>
 <div id="users">
