--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? || comment.private == false %>
-<div id="<%= "comment_#{comment.id}"%>" class="box rounded comment">
+<div id="<%= "comment_#{comment.id}"%>" class="well comment">
   <span class="comment-text">"<%= comment.text %>"</span>
   <span class="comment-user"> - <%= comment.user.nil? ? "Anonymous" : comment.user.display_name %></span>
   <span class="comment-date"><%= comment.created_at.strftime('at %l:%M%P on %B %d, %Y') %></span>
