--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -1,4 +1,4 @@
-<div id="idea_<%= idea.id %>" class="box idea" data-id="<%= idea.id %>">
+<div id="idea_<%= idea.id %>" class="well well-sm idea" data-id="<%= idea.id %>">
   <span class="idea-text"><%= link_to idea.text, project_phase_idea_path(idea.phase.project, idea.phase, idea) %></span>
   <span class="idea-user"><%= idea.user.display_name unless idea.user.nil? %></span>
   <span class="idea-votes"><%= idea.votes_for == 1 ? '1 vote' : "#{idea.votes_for} votes" %></span>
