--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,16 +45,16 @@
         </div>
       </nav>
 
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span12">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
       </div>
-      <footer id="footer">
-        <p>&copy; Whitespace Initiatives</p>
-        <ul class="inline links">
+      <footer>
+        <p class="pull-left">&copy; Whitespace Initiatives</p>
+        <ul class="list-inline pull-right">
           <li><%= link_to "About", '/about'  %></li>
           <li><%= link_to "Contact", '/contact'  %></li>
           <li><%= link_to "Help", '/help'  %></li>
