--- a/app/views/phases/_idea.html.erb
+++ b/app/views/phases/_idea.html.erb
@@ -1,4 +1,4 @@
-<div id="idea_<%= idea.id %>" class="box idea">
+<div id="idea_<%= idea.id %>" class="well well-sm idea">
   <span class="idea-text"><%= link_to idea.text, project_phase_idea_path(idea.phase.project, idea.phase, idea) %></span>
   <span class="idea-user"><%= idea.user.display_name unless idea.user.nil? %></span>
   <span class="idea-votes"><%= "(#{idea.plusminus})" %></span>
