--- a/app/views/phases/_phase.html.erb
+++ b/app/views/phases/_phase.html.erb
@@ -1,4 +1,4 @@
-<div class="box phase">
+<div class="well well-sm phase">
   <div class="phase-name"><%= link_to phase.name, project_phase_path(phase.project, phase) %></div>
   <div class="phase-description"><%= phase.description %></div>
   <div class="phase-ideas"><%= render partial: 'ideas/idea', :collection => phase.ideas, :as => :idea %></div>
