--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,16 @@
-<h4>Projects</h4>
+<h2>Projects</h2>
 <% if can? :create, Project %>
 <div class="add">
-  <%= link_to 'New Project', new_project_path, {class: 'btn'} %>
+  <%= link_to 'New Project', new_project_path, {class: 'btn btn-default'} %>
 </div>
 <% end %>
 <hr>
-<div class="projects clear">
-  <%= render partial: 'project', :collection => @projects, :as => :project %>
+<div class="projects">
+  <div class="row">
+    <% @projects.each_with_index do |project, index| %>
+        <div class="col-md-6">
+          <%= render partial: 'project', :object => project %>
+        </div>
+    <% end %>
+  </div>
 </div>
-<hr>
