--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -18,7 +18,7 @@
   <%= render partial: 'comments/comment', :collection => @project.comments, :as => :comment %>
 </div>
 <% if can? :create, Comment %>
-<div class="box">
+<div class="well well-sm">
   <%= render 'comments/form', :record => [@project, @comment], :comment => @comment %>
 </div>
 <% end %>
