--- a/app/views/users/_user_box.html.erb
+++ b/app/views/users/_user_box.html.erb
@@ -1,4 +1,4 @@
-<div class="user box rounded">
+<div class="user well well-sm">
   <div class="user-name">
     <%= link_to "#{user.first_name} #{user.last_name}", user %>
   </div>
